GetStringUTF8Benchmark